# Legal-product

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json
.cursor/skills/tebekaye-ai/: SKILL.md
.cursor/skills/tebekaye-backend/: SKILL.md
.cursor/skills/tebekaye-data/: SKILL.md
.cursor/skills/tebekaye-frontend/: SKILL.md
.cursor/skills/tebekaye-qa/: SKILL.md
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: deps.py  main.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  chat.py  document.py  template.py  usage.py  user.py  workspace.py
apps/api/app/routers/: auth.py  billing.py  chat.py  documents.py  insights.py  templates.py  workspaces.py
apps/api/app/schemas/: auth.py  document.py  template.py  workspace.py
apps/api/app/services/: chunking.py  extract.py  indexing.py  limits.py  llm.py  storage.py
apps/api/scripts/: seed_local_dev.py
apps/web/: .env.local.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/app/: layout.tsx
apps/web/src/app/disclaimer/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/privacy/: page.tsx
apps/web/src/lib/: api.ts  local-dev-credentials.ts
content/templates/: manifest.json
docs/: foundations.md
scripts/: README.md  run-dev.ps1
supabase/: README.md
supabase/migrations/: 20260404120000_init_core.sql  20260404120001_seed_templates.sql
(+23 files in other folders)
